# csiro_traineeship

./: CMakeLists.txt  package.xml
launch/: logicaltest.launch  stones.launch
src/: logical_to_moveit.cpp  stone_mover.cpp
world/: camera2.world  camera_stone.sdf
